--- a/Documentation/Build a Raspberry Robot/Build a Raspberry Robot.tex
+++ b/Documentation/Build a Raspberry Robot/Build a Raspberry Robot.tex
@@ -540,17 +540,17 @@ If you do anything cool with your bot, please share! Send pictures, videos, soft
 Good luck! There is still a long road ahead to get razbot to the point where it may be useful as an education tool and for roboticists without the fair amount of multidisciplinary design and assembly skills required to get a robot working from the ground up. It may never get to that point, but with your help it will be one step closer.
 
 
-\begin{appendices}
-\chapter{Special Thanks}
-\textbf{Paul Bovbel} Created the razbot tutorials for learning about URDFs (Universal Robot Description Files) and the Gazebo Simulation Environment\\
-\textbf{Ilia Baranov} Provided useful advice throughout development as well as sanity checks and emotional support in the form of an unstoppable Starcraft opponent for most in the office. \\
-\textbf{Mike Palmer} Provided feedback on electronics board designs and contributed the low voltage protection circuit to the design.\\
-\textbf{Mike Purvis} Provded advice which helped significantly with getting robot upstart to run.\\
-\textbf{Martin Hummel} Provided a full ROS Indigo built on Raspbian Jessie image on \href{http://answers.ros.org/question/200504/raspbian-jessie-ros-indigo-download-image/?comment=203168#comment-203168}{answers.ros.org}
-
-Thank you all, this would not be possible without your input and support.
-
-\end{appendices}
+%\begin{appendices}
+%\chapter{Special Thanks}
+%\textbf{Paul Bovbel} Created the razbot tutorials for learning about URDFs (Universal Robot Description Files) and the Gazebo Simulation Environment\\
+%\textbf{Ilia Baranov} Provided useful advice throughout development as well as sanity checks \\
+%\textbf{Mike Palmer} Provided feedback on electronics board designs and contributed the low voltage protection circuit to the design.\\
+%\textbf{Mike Purvis} Provded advice which helped significantly with getting robot upstart to run.\\
+%\textbf{Martin Hummel} Provided a full ROS Indigo built on Raspbian Jessie image on \href{http://answers.ros.org/question/200504/raspbian-jessie-ros-indigo-download-image/?comment=203168#comment-203168}{answers.ros.org}
+%
+%Thank you all, this would not be possible without your input and support.
+%
+%\end{appendices}
 
 
 
